--- a/raygame/raygame.vcxproj
+++ b/raygame/raygame.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="ActorArray.cpp" />
     <ClCompile Include="CircleCollider.cpp" />
     <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="Componet.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="ActorArray.h" />
     <ClInclude Include="CircleCollider.h" />
     <ClInclude Include="Collider.h" />
+    <ClInclude Include="Componet.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Transform2D.h" />
