--- a/raygame/raygame.vcxproj
+++ b/raygame/raygame.vcxproj
@@ -182,6 +182,10 @@
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Transform2D.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Sprite\Larrot.png" />
+    <Image Include="Sprite\Learth.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
