--- a/raygame/raygame.vcxproj.filters
+++ b/raygame/raygame.vcxproj.filters
@@ -9,6 +9,12 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
+    <Filter Include="Sprite">
+      <UniqueIdentifier>{d48f2df6-1a45-451d-a3ff-1aff06ab0aeb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Componets">
+      <UniqueIdentifier>{7912e77b-fd4f-4319-a2b1-94acc2b26488}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -44,23 +50,23 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Input.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Movement.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Sprite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Charactor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="HealthComp.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Componets</Filter>
+    </ClCompile>
+    <ClCompile Include="Movement.cpp">
+      <Filter>Componets</Filter>
+    </ClCompile>
+    <ClCompile Include="Input.cpp">
+      <Filter>Componets</Filter>
+    </ClCompile>
+    <ClCompile Include="Sprite.cpp">
+      <Filter>Componets</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -94,23 +100,31 @@
     <ClInclude Include="Enemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Input.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Player.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Movement.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Sprite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Charactor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HealthComp.h">
-      <Filter>Header Files</Filter>
+      <Filter>Componets</Filter>
     </ClInclude>
+    <ClInclude Include="Movement.h">
+      <Filter>Componets</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Componets</Filter>
+    </ClInclude>
+    <ClInclude Include="Sprite.h">
+      <Filter>Componets</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Sprite\Larrot.png">
+      <Filter>Sprite</Filter>
+    </Image>
+    <Image Include="Sprite\Learth.png">
+      <Filter>Sprite</Filter>
+    </Image>
   </ItemGroup>
 </Project>
