the character now moves and i started the shoot.

--- a/raygame/raygame.vcxproj.filters
+++ b/raygame/raygame.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="Sprite.cpp">
       <Filter>Componets</Filter>
     </ClCompile>
+    <ClCompile Include="MainScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Scene.h">
@@ -117,6 +120,9 @@
     </ClInclude>
     <ClInclude Include="Sprite.h">
       <Filter>Componets</Filter>
+    </ClInclude>
+    <ClInclude Include="MainScene.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
