--- a/raygame/raygame.vcxproj
+++ b/raygame/raygame.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="HealthComp.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MainScene.cpp" />
     <ClCompile Include="Movement.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="HealthComp.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="MainScene.h" />
     <ClInclude Include="Movement.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Scene.h" />
