made a enemy follows the player (there is a memory leack).

--- a/raygame/raygame.vcxproj.filters
+++ b/raygame/raygame.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="MainScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SHOOT.cpp">
+      <Filter>Componets</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Scene.h">
@@ -123,6 +126,9 @@
     </ClInclude>
     <ClInclude Include="MainScene.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SHOOT.h">
+      <Filter>Componets</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
