--- a/raygame/raygame.vcxproj
+++ b/raygame/raygame.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="Movement.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SHOOT.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Transform2D.cpp" />
   </ItemGroup>
@@ -181,6 +182,7 @@
     <ClInclude Include="Movement.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="SHOOT.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Transform2D.h" />
   </ItemGroup>
